fix: changed font-size of heading on small devices

--- a/styles.css
+++ b/styles.css
@@ -415,7 +415,7 @@ hr {
     }
     73.3333%,
     93.3333% {
-      width: 22.5ch;
+      width: 20ch;
     }
   }
   
@@ -428,7 +428,7 @@ hr {
     }
     39.9999%,
     59.9999% {
-      width: 24.5ch;
+      width: 22ch;
     }
   }
   
@@ -440,7 +440,7 @@ hr {
     }
     6.6666%,
     26.6666% {
-      width: 20.5ch;
+      width: 19ch;
     }
   }
 
